--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -3381,6 +3381,9 @@ form#user-login, form#user-pass {
   font-size: 0.8em; }
 
 /********** OPPA SPANISH STYLE **********/
+body.i18n-es label, body.i18n-es .pane-title, body.i18n-es .ckeditor_links, body.i18n-es .link-edit-summary, body.i18n-es .form-actions input, body.i18n-es .vertical-tabs-list li a strong {
+  text-transform: none; }
+
 @media (min-width: 680px) {
   body.i18n-es .pane-superfish-1 #superfish-1 li a {
     font-size: 0.9em;
