Center titles in the views

--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -2774,6 +2774,8 @@ form#user-login, form#user-pass {
         @media (min-width: 1342px) {
           .blog-type-page #main-content .panel-myriad-layout .featured-display .view-content .views-row:first-child, .blog-type-page #main-content .panel-myriad-layout .featured-display .view-content .views-row:last-child {
             margin: 0 0.5em; } }
+        .blog-type-page #main-content .panel-myriad-layout .featured-display .view-content .views-row .views-field-title-field p {
+          text-align: center; }
         .blog-type-page #main-content .panel-myriad-layout .featured-display .view-content .views-row .featured-image img {
           width: 100%;
           height: auto; }
