--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -3400,6 +3400,10 @@ form#user-login, form#user-pass {
             }
           }
 
+          .views-field-title-field p {
+            text-align: center;
+          }
+
           .featured-image img {
             width: 100%;
             height: auto;
