--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -3586,7 +3586,8 @@ form#user-login, form#user-pass {
     }
   }
 
-  .views-field-title-field p {
+  .views-field-title-field p,
+  .views-field-title-field h2 {
     text-align: center;
     margin: 0;
   }
