--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -3032,8 +3032,9 @@ form#user-login, form#user-pass {
         text-align: center;
         margin-bottom: 1em; }
       .blog-type-page #main-content .panel-myriad-layout .featured-display .view-content .views-field-body img {
-        width: 100%;
-        height: auto; }
+        display: block;
+        height: auto;
+        margin: auto; }
   .blog-type-page #main-content .panel-myriad-layout .pane-card-cycles-card-blog .view-content {
     display: -webkit-box;
     display: -ms-flexbox;
