--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -2896,15 +2896,9 @@ form#user-login, form#user-pass {
   .blog-type-page #main-content .panel-myriad-layout .views-exposed-widgets label:not(.option):after {
     content: ":"; }
   .blog-type-page #main-content .panel-myriad-layout .row-one {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-flow: row wrap;
-            flex-flow: row wrap;
     width: 100%; }
   .blog-type-page #main-content .panel-myriad-layout .main-content {
+    width: 100%;
     -webkit-box-flex: 1;
         -ms-flex: 1 100%;
             flex: 1 100%;
@@ -2967,16 +2961,15 @@ form#user-login, form#user-pass {
   .blog-type-page #main-content .panel-myriad-layout .featured-display {
     height: 100%; }
     .blog-type-page #main-content .panel-myriad-layout .featured-display .view-content {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
+      display: block;
+      width: 100%;
       -webkit-box-orient: horizontal;
       -webkit-box-direction: normal;
           -ms-flex-flow: row wrap;
               flex-flow: row wrap;
       height: 100%; }
       .blog-type-page #main-content .panel-myriad-layout .featured-display .view-content .views-row {
-        width: 50%;
+        width: calc(30% - 1em);
         -webkit-box-flex: 1;
             -ms-flex: 1 100%;
                 flex: 1 100%;
@@ -2984,13 +2977,12 @@ form#user-login, form#user-pass {
         margin: 0.5em;
         border: 1px solid #cccccc;
         font-size: 14px;
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
+        display: inline-block;
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
             -ms-flex-flow: column nowrap;
-                flex-flow: column nowrap; }
+                flex-flow: column nowrap;
+        vertical-align: top; }
         @media (min-width: 420px) {
           .blog-type-page #main-content .panel-myriad-layout .featured-display .view-content .views-row {
             -webkit-box-flex: 1;
