--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -1430,9 +1430,7 @@ html.js fieldset.collapsible div.fieldset-wrapper {
   float: left; }
 
 #block-panels-mini-header .row-one {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: block;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-flow: row wrap;
@@ -2915,7 +2913,9 @@ form#user-login, form#user-pass {
             flex: 1 1 0;
     margin: 0.5em;
     min-width: 0;
-    max-width: 100%; }
+    max-width: 100%;
+    float: right;
+    width: 300px; }
     @media (min-width: 375px) {
       .blog-type-page #main-content .panel-myriad-layout .sidebar-content {
         min-width: 300px;
