--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -1696,7 +1696,7 @@ html.js fieldset.collapsible div.fieldset-wrapper {
 }
 
 #block-panels-mini-header .row-one {
-  display: flex;
+  display: block;
   flex-flow: row wrap;
   width: 100%;
   margin-bottom: 0px;
@@ -3291,6 +3291,8 @@ form#user-login, form#user-pass {
       margin: 0.5em;
       min-width: 0;
       max-width: 100%;
+      float: right;
+      width: 300px;
 
       @include breakpoint(375px) {
         min-width: 300px;
