Wrap view items around the sidebar

--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -1696,7 +1696,7 @@ html.js fieldset.collapsible div.fieldset-wrapper {
 }
 
 #block-panels-mini-header .row-one {
-  display: block;
+  display: flex;
   flex-flow: row wrap;
   width: 100%;
   margin-bottom: 0px;
