--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -2934,6 +2934,9 @@ form#user-login, form#user-pass {
         -webkit-box-flex: 1;
             -ms-flex: 1 1 250px;
                 flex: 1 1 250px; } }
+    @media (min-width: 944px) {
+      .blog-type-page #main-content .panel-myriad-layout .sidebar-content {
+        min-width: 0; } }
     .blog-type-page #main-content .panel-myriad-layout .sidebar-content .pane-articles-test-panel-pane-7 .view-content {
       -webkit-column-width: 150px;
               column-width: 150px; }
@@ -3007,6 +3010,9 @@ form#user-login, form#user-pass {
                     flex: 1 1 300px;
             font-size: 18px;
             min-width: 300px; } }
+        @media (min-width: 944px) {
+          .blog-type-page #main-content .panel-myriad-layout .featured-display .view-content .views-row {
+            min-width: 0; } }
         .blog-type-page #main-content .panel-myriad-layout .featured-display .view-content .views-row .views-field-title-field, .blog-type-page #main-content .panel-myriad-layout .featured-display .view-content .views-row .views-field-title-field p {
           text-align: center; }
         .blog-type-page #main-content .panel-myriad-layout .featured-display .view-content .views-row .featured-image img {
