--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -3443,4 +3443,9 @@ body.i18n-es label, body.i18n-es .pane-title, body.i18n-es .ckeditor_links, body
   body.i18n-es #block-panels-mini-header.sticky-header #superfish-1 > li a {
     font-size: 14.5px;
     padding: 0 10px; } }
+
+.field-name-body table {
+  margin: auto; }
+  .field-name-body table td {
+    border: 0px; }
 /*# sourceMappingURL=dgr_rubik_style.css.map */
