--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -3862,3 +3862,13 @@ body.i18n-es {
     }
   }
 }
+
+.field-name-body {
+  table {
+    margin: auto;
+
+    td {
+      border: 0px;
+    }
+  }
+}
