--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -3181,12 +3181,6 @@ form#user-login, form#user-pass {
   }
 }
 
-[data-pane="3197"] {
-  width: 100%;
-  max-width: 350px;
-  margin: auto;
-}
-
 .node-type-panopoly-faq {
   .field-name-field-categories {
     margin-top: 1em;
@@ -3286,8 +3280,7 @@ form#user-login, form#user-pass {
       }
     }     
   }
-  .pane-card-cycles-card-slideshow,
-  .pane-card-cycles-slideshow-clone, {
+  .pane-card-cycles-panel-pane-1 {
     position: relative;
 
     .col-1 {
