--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -3816,6 +3816,7 @@ form#user-login, form#user-pass {
   }
   #edit-reset {
     position: absolute;
+    top: initial;
     bottom: 18px;
     right: 10px;
   }
