--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -3831,7 +3831,7 @@ form#user-login, form#user-pass {
   .views-exposed-form {
     margin: 0;
   }
-  [id*='edit-reset'] {
+  #edit-reset, #edit-reset--2 {
     position: absolute;
     top: initial;
     bottom: 18px;
