--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -3421,6 +3421,36 @@ form#user-login, form#user-pass {
   bottom: 18px;
   right: 10px; }
 
+.page-taxonomy-term .views-exposed-form {
+  margin: 0; }
+  .page-taxonomy-term .views-exposed-form #edit-reset {
+    position: absolute;
+    bottom: 18px;
+    top: initial; }
+
+@media (min-width: 944px) {
+  .page-taxonomy-term .sidebar-content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+  .page-taxonomy-term .pane-views-68df6443216479c90da4235283a03ab4 {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 0px;
+            flex: 1 1 0;
+    margin-right: 0.5em; }
+  .page-taxonomy-term .pane-uuid-264212cf-229e-4665-be57-bb9b7a8008f7 {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 0px;
+            flex: 1 1 0;
+    margin: 0;
+    margin-left: 0.5em; } }
+
 /********** OPPA SPANISH STYLE **********/
 body.i18n-es label, body.i18n-es .pane-title, body.i18n-es .ckeditor_links, body.i18n-es .link-edit-summary, body.i18n-es .form-actions input, body.i18n-es .vertical-tabs-list li a strong {
   text-transform: none; }
