Taxonomy term page styling

--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -3861,7 +3861,7 @@ form#user-login, form#user-pass {
       flex: 1 1 0;
       margin-right: 0.5em;
     }
-    .pane-uuid-264212cf-229e-4665-be57-bb9b7a8008f7 {
+    [data-pane="3494"] {
       flex: 1 1 0;
       margin: 0;
       margin-left: 0.5em;
