--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -3444,7 +3444,7 @@ form#user-login, form#user-pass {
         -ms-flex: 1 1 0px;
             flex: 1 1 0;
     margin-right: 0.5em; }
-  .page-taxonomy-term .pane-uuid-264212cf-229e-4665-be57-bb9b7a8008f7 {
+  .page-taxonomy-term [data-pane="3494"] {
     -webkit-box-flex: 1;
         -ms-flex: 1 1 0px;
             flex: 1 1 0;
