Styling the categories page

--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -3410,7 +3410,36 @@ form#user-login, form#user-pass {
   .page-categories #main-content .radix-burr-flipped .col-md-4 {
     width: 33.33333333333333%;
     width: calc(100% / 3);
-    float: left; } }
+    float: left; }
+  .page-categories #main-content .radix-burr-flipped .main-display .view-content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+    -webkit-box-align: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+    .page-categories #main-content .radix-burr-flipped .main-display .view-content .views-row {
+      -webkit-box-flex: 1;
+          -ms-flex: 1 1 150px;
+              flex: 1 1 150px;
+      margin: 0.5em;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      text-align: center; } }
 
 .pane-views-exp-categories-panel-pane-2 .views-exposed-form {
   margin: 0; }
