--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -3823,6 +3823,22 @@ form#user-login, form#user-pass {
         width: calc(100% / 3);
         float: left;
       }
+
+      .main-display .view-content {
+        display: flex;
+        flex-flow: row wrap;
+        align-items: stretch;
+        justify-content: center;
+
+        .views-row {
+          flex: 1 1 150px;
+          margin: 0.5em;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          text-align: center;
+        }
+      }
     }
   }
 }
