--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -338,6 +338,8 @@ div#toolbar div.toolbar-shortcuts ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex; }
+  .views-exposed-form label {
+    font-size: 13px; }
   .views-exposed-form .basic-options {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -3482,6 +3484,22 @@ form#user-login, form#user-pass {
               flex: 1 1 0;
       margin: 0;
       margin-left: 0.5em; } }
+
+.page-taxonomy-term #main-content .panel-myriad-layout .views-widget-filter-type {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 100%;
+          flex: 1 0 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+  .page-taxonomy-term #main-content .panel-myriad-layout .views-widget-filter-type .views-widget {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 auto;
+            flex: 1 0 auto; }
+  .page-taxonomy-term #main-content .panel-myriad-layout .views-widget-filter-type .form-type-bef-checkbox {
+    display: inline-block;
+    width: auto;
+    margin-right: 0.5em; }
 
 /********** OPPA SPANISH STYLE **********/
 body.i18n-es label, body.i18n-es .pane-title, body.i18n-es .ckeditor_links, body.i18n-es .link-edit-summary, body.i18n-es .form-actions input, body.i18n-es .vertical-tabs-list li a strong {
