--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -405,6 +405,10 @@ div#toolbar div.toolbar-shortcuts ul {
   margin-right: 1em;
   display: flex;
 
+  label {
+    font-size: 13px;
+  }
+
   .basic-options {
     display: flex;
     flex-wrap: wrap;
@@ -3885,6 +3889,21 @@ form#user-login, form#user-pass {
         margin: 0;
         margin-left: 0.5em;
       }
+    }
+  }
+
+  .views-widget-filter-type {
+    flex: 1 0 100%;
+    display: flex;
+
+    .views-widget {
+      flex: 1 0 auto;
+    }
+
+    .form-type-bef-checkbox {
+      display: inline-block;
+      width: auto;
+      margin-right: 0.5em;
     }
   }
 }
