Make the sidebar blocks multi-column

--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -3006,7 +3006,12 @@ form#user-login, form#user-pass {
     @media (min-width: 944px) {
       .blog-type-page #main-content .panel-myriad-layout .sidebar-content {
         min-width: 0; } }
-    .blog-type-page #main-content .panel-myriad-layout .sidebar-content .pane-articles-test-panel-pane-7 .view-content {
+    .blog-type-page #main-content .panel-myriad-layout .sidebar-content .view-articles2.view-display-id-panel_pane_2,
+    .blog-type-page #main-content .panel-myriad-layout .sidebar-content .view-articles2.view-display-id-panel_pane_7,
+    .blog-type-page #main-content .panel-myriad-layout .sidebar-content .view-news2.view-display-id-panel_pane_2,
+    .blog-type-page #main-content .panel-myriad-layout .sidebar-content .view-news2.view-display-id-panel_pane_3,
+    .blog-type-page #main-content .panel-myriad-layout .sidebar-content .view-press-releases2.view-display-id-panel_pane_2,
+    .blog-type-page #main-content .panel-myriad-layout .sidebar-content .view-press-releases2.view-display-id-panel_pane_3 {
       -webkit-column-width: 150px;
               column-width: 150px; }
     .blog-type-page #main-content .panel-myriad-layout .sidebar-content > div:first-child {
@@ -3032,9 +3037,9 @@ form#user-login, form#user-pass {
       padding: 3px 4px;
       border-radius: 5px;
       width: auto; }
-  .blog-type-page #main-content .panel-myriad-layout .pane-articles-test-panel-pane-6,
-  .blog-type-page #main-content .panel-myriad-layout .pane-news-test-panel-pane-6,
-  .blog-type-page #main-content .panel-myriad-layout .pane-press-releases-test-panel-pane-6,
+  .blog-type-page #main-content .panel-myriad-layout .pane-articles2-panel-pane-6,
+  .blog-type-page #main-content .panel-myriad-layout .pane-news2-panel-pane-6,
+  .blog-type-page #main-content .panel-myriad-layout .pane-press-releases2-panel-pane-6,
   .blog-type-page #main-content .panel-myriad-layout .pane-panopoly-faq-panel-pane-4 {
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
@@ -3387,9 +3392,9 @@ form#user-login, form#user-pass {
   .node-type-press-release.panelized-node .pane-node-links .links {
     display: inline-block; }
 
-.pane-news-test-panel-pane-5 .view-content,
-.pane-articles-test-panel-pane-5 .view-content,
-.pane-press-releases-test-panel-pane-5 .view-content {
+.pane-news2-panel-pane-5 .view-content,
+.pane-articles2-panel-pane-5 .view-content,
+.pane-press-releases2-panel-pane-5 .view-content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -3398,9 +3403,9 @@ form#user-login, form#user-pass {
       -ms-flex-flow: row wrap;
           flex-flow: row wrap; }
 
-.pane-news-test-panel-pane-5 .views-row,
-.pane-articles-test-panel-pane-5 .views-row,
-.pane-press-releases-test-panel-pane-5 .views-row {
+.pane-news2-panel-pane-5 .views-row,
+.pane-articles2-panel-pane-5 .views-row,
+.pane-press-releases2-panel-pane-5 .views-row {
   display: inline-block;
   vertical-align: top;
   width: 230px;
@@ -3410,15 +3415,15 @@ form#user-login, form#user-pass {
       -ms-flex: 1 240px;
           flex: 1 240px; }
 
-.pane-news-test-panel-pane-5 .views-field-field-featured-image,
-.pane-articles-test-panel-pane-5 .views-field-field-featured-image,
-.pane-press-releases-test-panel-pane-5 .views-field-field-featured-image {
+.pane-news2-panel-pane-5 .views-field-field-featured-image,
+.pane-articles2-panel-pane-5 .views-field-field-featured-image,
+.pane-press-releases2-panel-pane-5 .views-field-field-featured-image {
   float: left;
   margin-right: 10px; }
 
-.pane-news-test-panel-pane-5 .views-field-published-at,
-.pane-articles-test-panel-pane-5 .views-field-published-at,
-.pane-press-releases-test-panel-pane-5 .views-field-published-at {
+.pane-news2-panel-pane-5 .views-field-published-at,
+.pane-articles2-panel-pane-5 .views-field-published-at,
+.pane-press-releases2-panel-pane-5 .views-field-published-at {
   font-size: 0.8em; }
 
 @media (min-width: 944px) {
